--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,133 @@
+
+body{
+  background-color: var(--bs-body-bg);
+}
+
+
+
+.Navlogo {
+  src: url('/src/assets/Planet.png');
+}
+
 @media all and (max-width: 320px) {
-  .d-block {
-    max-width: 17rem;
-    width:100%;
+
+  .image-home{
+    background-image: url('/src/assets/SavePaper.jpg');
+    height: 200px;
+    width: 100%;
+    background-size: cover;
+  }
+  
+  .container{
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    min-height: 100%;
+  }
+  
+  
+  .card{
+    width:17.7rem;
     height:auto;
   }
+  p {
+    text-indent: 0ch;
+  }
+  button {
+    background: #5469d4;
+    font-family: Arial, sans-serif;
+    color: #ffffff;
+    border-radius: 4px;
+    border: 0;
+    padding: 12px 16px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
+    width: 100%;
+    display: inline-block;
+    height:auto;
+    size: sm;
+  }
+  .form-control{
+    max-width: 20rem;
+    width:auto;
+  }
+  form {
+    width:auto;
+  }
+  
+}
 
+@media all and (min-width:321px) and (max-width: 375px) {
+  .container{
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    min-height: 100%;
+  }
+  
+  .image-home{
+    background-image: url('/src/assets/SavePaper.jpg');
+    height: 300px;
+    width: 100%;
+    background-size: cover;
+  }
+  .card{
+    width:17.7rem;
+    height:auto;
+  }
+  p {
+    text-indent: 0ch;
+  }
+  button {
+    background: #5469d4;
+    font-family: Arial, sans-serif;
+    color: #ffffff;
+    border-radius: 4px;
+    border: 0;
+    padding: 12px 16px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
+    width: 100%;
+    display: inline-block;
+    height:auto;
+    size: sm;
+  }
+  .form-control{
+    max-width: 20rem;
+    width:auto;
+  }
+  form {
+    width:auto;
+  }
+}
+/* 425px */
+@media all and (min-width:376px) and (max-width: 425px) {
+  .container{
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    min-height: 100%;
+  }
+  
+  .image-home{
+    background-image: url('/src/assets/SavePaper.jpg');
+    height: 400px;
+    width: 100%;
+    background-size: cover;
+  }
+  
   .card{
     width:20rem;
     height:auto;
@@ -25,111 +148,37 @@
     transition: all 0.2s ease;
     box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
     width: 100%;
- 
+    display: inline-block;
     height:auto;
     size: sm;
   }
   .form-control{
     max-width: 20rem;
-    width:100%;
+    width:auto;
   }
   form {
-    max-width: 20rem;
-    width:100%;
-  }
-}
-
-@media all and (min-width:321px) and (max-width: 375px) {
-  .d-block {
-    max-width: 20rem;
-    width:100%;
-    height:auto;
-  }
-
-  .card{
-    width:22rem;
-    height:auto;
-  }
-  p {
-    text-indent: 0ch;
-  }
-  button {
-    background: #5469d4;
-    font-family: Arial, sans-serif;
-    color: #ffffff;
-    border-radius: 4px;
-    border: 0;
-    padding: 12px 16px;
-    font-size: 16px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all 0.2s ease;
-    box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
-    width: 100%;
- 
-    height:auto;
-    size: sm;
-  }
-  .form-control{
-    max-width: 20rem;
-    width:100%;
-  }
-  form {
-    max-width: 20rem;
-    width:100%;
-  }
-}
-/* 425px */
-@media all and (min-width:376px) and (max-width: 425px) {
-  .d-block {
-    max-width: 24rem;
-    width:100%;
-    height:auto;
-  }
-
-  .card{
-    width:24rem;
-    height:auto;
-  }
-  p {
-    text-indent: 0ch;
-  }
-  button {
-    background: #5469d4;
-    font-family: Arial, sans-serif;
-    color: #ffffff;
-    border-radius: 4px;
-    border: 0;
-    padding: 12px 16px;
-    font-size: 16px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all 0.2s ease;
-    box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
-    width: 100%;
- 
-    height:auto;
-    size: sm;
-  }
-  .form-control{
-    max-width: 24rem;
-    width:100%;
-  }
-  form {
-    max-width: 24rem;
-    width:100%;
+    width:auto;
   }
 }
 
 @media all and (min-width:426px) and (max-width: 768px) {
-  .d-block {
-    max-width: 30rem;
-    width:100%;
-    height:auto;
+  .container{
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    min-height: 100%;
   }
-
+  
+  .image-home{
+    background-image: url('/src/assets/SavePaper.jpg');
+    height: 400px;
+    width: 100%;
+    background-size: cover;
+  }
   .card{
-    width:30rem;
+    width:23rem;
     height:auto;
   }
   p {
@@ -148,28 +197,36 @@
     transition: all 0.2s ease;
     box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
     width: 100%;
- 
+    display: inline-block;
     height:auto;
     size: sm;
   }
   .form-control{
-    max-width: 30rem;
-    width:100%;
+    max-width: 20rem;
+    width:auto;
   }
   form {
-    max-width: 30rem;
-    width:100%;
+    width:auto;
   }
 }
 @media all and (min-width:769px) and (max-width: 1024px) {
-  .d-block {
-    max-width: 33rem;
-    width:100%;
-    height:auto;
+  .container{
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    min-height: 100%;
   }
-
+  
+  .image-home{
+    background-image: url('/src/assets/SavePaper.jpg');
+    height: 600px;
+    width: 100%;
+    background-size: cover;
+  }
   .card{
-    width:33rem;
+    width:23rem;
     height:auto;
   }
   p {
@@ -188,34 +245,70 @@
     transition: all 0.2s ease;
     box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
     width: 100%;
- 
+    display: inline-block;
     height:auto;
     size: sm;
   }
   .form-control{
-    max-width: 25rem;
-    width:100%;
+    max-width: 20rem;
+    width:auto;
   }
   form {
-    max-width: 30rem;
-    width:100%;
-  }
-}
-@media all and (min-width:1025px) {
+    width:auto;
+  }}
+/** general Settings **/
 .App {
   text-align: center;
 }
 
-.d-block {
-  max-width:33rem;
-  width:100%;
-  height:auto;
+@media all and (min-width:1025px) {
+  .container{
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    min-height: 100%;
+  }
+  
+  .image-home{
+    background-image: url('/src/assets/SavePaper.jpg');
+    height: 600px;
+    width: 100%;
+    background-size: cover;
+  }
+  
+  .card{
+    width:25rem;
+    height:auto;
+  }
+p {
+  text-indent: 0ch;
 }
-
-.card{
-  max-width:33rem;
-  width:100%;
+button {
+  background: #5469d4;
+  font-family: Arial, sans-serif;
+  color: #ffffff;
+  border-radius: 4px;
+  border: 0;
+  padding: 12px 16px;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
+  width: 100%;
+  display: inline-block;
   height:auto;
+  size: sm;
+}
+.form-control{
+  max-width: 20rem;
+  width:auto;
+}
+form {
+  width:auto;
+}
 }
 .App-logo {
   height: 40vmin;
@@ -262,31 +355,9 @@
   }
 }
 
-#root {
-  display: flex;
-  align-items: center;
-}
 
-body {
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  font-size: 16px;
-  -webkit-font-smoothing: antialiased;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  height: 100vh;
-  width: 100vw;
-}
 
-form {
-  width: 30vw;
-  min-width: 500px;
-  align-self: center;
-  box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
-    0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
-  border-radius: 7px;
-  padding: 40px;
-}
+
 
 #payment-message {
   color: rgb(105, 115, 134);
@@ -300,22 +371,7 @@ form {
   margin-bottom: 24px;
 }
 
-/* Buttons and links */
-button {
-  background: #5469d4;
-  font-family: Arial, sans-serif;
-  color: #ffffff;
-  border-radius: 4px;
-  border: 0;
-  padding: 12px 16px;
-  font-size: 16px;
-  font-weight: 600;
-  cursor: pointer;
-  display: block;
-  transition: all 0.2s ease;
-  box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
-  width: 100%;
-}
+
 
 button:hover {
   filter: contrast(115%);
@@ -390,14 +446,3 @@ button:disabled {
   }
 }
 
-
-  form {
-    width: 30rem;
-    min-width: initial;
-  }
-
-  .form-control{
-    max-width: 30rem;
-    width:100%;
-  }
-}
